--- a/ProjetoDDDNet10.API/appsettings.json
+++ b/ProjetoDDDNet10.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=ProjetoDDDNet10;User Id=sa;Password=paanssy1234$;TrustServerCertificate=True;"
+  }
 }
